--- a/styles/partials/_card.scss
+++ b/styles/partials/_card.scss
@@ -26,6 +26,9 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
+
+    & > a { width: 62%; }
+    .card-buttons { min-width: 108px; }
   }
 
   .card-title {
