--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -6,11 +6,9 @@ header {
   flex-direction: column;
   align-items: center;
   background-color: #1e1f26;
-  padding: 3rem;
-  
+  padding: 3rem 1rem;
+  text-align: center;
   font-family: 'Francois One', sans-serif;
-
-
 
   h1 {
     text-transform: uppercase;
